# invoice-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  README.md  main.py  pyproject.toml
app/: application.py  constants.py
app/api/: paths.py
app/api/middlewares/: middlewares.py  utils.py
app/api/routers/public/: public_router_v10.py
app/base_application/: application.py
app/config/: base_ornament_settings.py  config.py  constants.py  environment.py
app/exceptions/: settings_exceptions.py
app/log_utils/: slack_handler.py
app/redis/: cluster.py  service.py  utils.py
app/schemas/: base.py
app/sentry/: setup.py
app/slack/: client.py
