[tool.poetry]
name = "backend-template"
version = "1.0.0"
description = "Ornament microservice base template. Fork this project to start new service."
authors = ["Alexey Voskresenskiy <alexey.voskresenskiy@ornament.health>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sentry-sdk = "^1.35.0"
pydantic = "^2.5.1"
requests = "^2.31.0"
httpx = "^0.25.1"
redis = "^5.0.1"
sqlalchemy = "^2.0.23"
pydantic-settings = "^2.1.0"
slack-sdk = "^3.26.0"
aiohttp = "^3.9.1"
fastapi-camelcase = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pre-commit = "^3.5.0"
black = "^23.11.0"
pytest-asyncio = "^0.20.3"
pytest-mock = "^3.10.0"
locust = "^2.18.3"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
